--- a/News-Tracker-App/src/main/resources/application.properties
+++ b/News-Tracker-App/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+#logging properties
+management.endpoints.web.exposure.include=logfile
+logging.file.name=log/log.txt
+#logging.logback.rollingpolicy.max-file-size=1MB
+#logging.logback.rollingpolicy.clean-history-on-start=true
