--- a/News-Tracker-App/src/main/resources/application.properties
+++ b/News-Tracker-App/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.allow-circular-references: true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/news_tracker_app
 spring.datasource.username=root
-spring.datasource.password=root1234$$
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -18,3 +18,6 @@ management.endpoints.web.exposure.include=logfile
 logging.file.name=log/log.txt
 #logging.logback.rollingpolicy.max-file-size=1MB
 #logging.logback.rollingpolicy.clean-history-on-start=true
+
+spring.security.user.name=admin
+spring.security.user.password=pass@1234
