--- a/News-Tracker-App/src/main/resources/application.properties
+++ b/News-Tracker-App/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9090
+server.port=8080
 spring.main.allow-circular-references: true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/news_tracker_app
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/news_tracker_app
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
