--- a/News-Tracker-App/src/main/resources/application.properties
+++ b/News-Tracker-App/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 spring.main.allow-circular-references: true
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/news_tracker_app
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://nta-db.c3w06a6igilr.ap-south-1.rds.amazonaws.com:3306/news_tracker_app
+spring.datasource.username=admin
+spring.datasource.password=root1234$$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
