--- a/News-Tracker-App/Dockerfile
+++ b/News-Tracker-App/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
 EXPOSE 8080
 ADD target/newstrackerapp.jar newstrackerapp.jar
-ENTRYPOINT ["java","-jar","/newstrackerapp,jar"]
+ENTRYPOINT ["java","-jar","/newstrackerapp.jar"]
